remove test in the pipeline